fixing gif breaking issue on mobile

--- a/css/article.css
+++ b/css/article.css
@@ -73,6 +73,7 @@
 .step-gif{
 	margin: 40px 0;
 	width:350px;
+	max-width:50vw;
 	height:auto;
 }
 
@@ -94,16 +95,13 @@
 	.article-h1{
 		font-size:26px;
 	}
-	.image-div{
-		height:200px;
-		width:100%;
-	}
-	.step-gif{
-		width:250px;
-	}
+
 	.step-container{
 
 	min-width:90vw;
 
 	}
+	.article-container{
+		flex-basis:100%;
+	};
 }
